[package]
name = "ability-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
enum-utils = "0.1.2"
rayon = "1.5.3"
wasm-bindgen = { version = "0.2.83", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
