[package]
name = "ability-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
enum-utils = "0.1.2"
rayon = "1.5.3"
serde = { version = "1.0.145", optional = true, features = ["serde_derive"] }
wasm-bindgen = { version = "0.2.83", optional = true }
wasm-bindgen-rayon = { version = "1.0.3", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-rayon"]
serde = ["dep:serde"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]

[unstable]
build-std = ["panic_abort", "std"]
